More tables that work in both HTML and LaTeX

--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -140,81 +140,55 @@ Total &  &  &  & $106397$ & $95253$ & $82518$ & $284168$ \\
 \label{tab:surveys-used}
 \end{longtable}
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{lX}
-\toprule
-Survey & Exclusion reason \\ 
- \midrule
-MOZ2003DHS & No GPS coordinates available to place survey clusters within districts. \\
-TZA2015DHS & Insufficient sexual behaviour questions. \\
-UGA2004AIS & Unable to download region boundaries. \\
-ZMB2002DHS & No GPS coordinates available to place survey clusters within districts. \\
-\bottomrule
-\end{tabularx}
-\label{tab:surveys-excluded}
-\caption{All of that surveys that were excluded from the analysis.}
-\end{table}
+| Survey              | Exclusion reason                           |
+|---------------------|--------------------------------------------|
+| Mozambique 2003 DHS | No GPS coordinates available to place survey clusters within districts. |
+| Tanzania 2015 DHS   | Insufficient sexual behaviour questions.                                |
+| Uganda 2004 AIS     | Unable to download region boundaries.                                   |
+| Zambia 2002 DHS     | No GPS coordinates available to place survey clusters within districts. |
+
+Table: (\#tab:surveys-excluded) All of that surveys that were excluded from the analysis.
 
 ## Spatial analysis levels
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{lXX}
-\toprule
-Country & Number of areas & Analysis level \\ 
-\midrule
-Botswana & 27 & 3 \\ 
-Cameroon & 58 & 2 \\ 
-Kenya & 47 & 2 \\ 
-Lesotho & 10 & 1 \\ 
-Mozambique & 161 & 3 \\ 
-Malawi & 33 & 5 \\ 
-Namibia & 38 & 2 \\ 
-Eswatini & 4 & 1 \\ 
-Tanzania & 195 & 4 \\ 
-Uganda & 136 & 3 \\ 
-South Africa & 52 & 2 \\ 
-Zambia & 116 & 2 \\ 
-Zimbabwe & 63 & 2 \\ 
-\bottomrule
-\end{tabularx}
-\label{tab:area-levels}
-\caption{The numer of areas and analysis levels for each country that were used in the analysis.}
-\end{table}
+| Country      | Number of areas | Analysis level |
+|--------------|-----------------|----------------|
+| Botswana     | 27              | 3              |
+| Cameroon     | 58              | 2              |
+| Kenya        | 47              | 2              |
+| Lesotho      | 10              | 1              |
+| Mozambique   | 161             | 3              |
+| Malawi       | 33              | 5              |
+| Namibia      | 38              | 2              |
+| Eswatini     | 4               | 1              |
+| Tanzania     | 195             | 4              |
+| Uganda       | 136             | 3              |
+| South Africa | 52              | 2              |
+| Zambia       | 116             | 2              |
+| Zimbabwe     | 63              | 2              |
+
+Table: (\#tab:area-levels) The number of areas and analysis level for each country that was used in the analysis.
 
 ## Survey questions and risk group allocation {#survey-questions}
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{lX}
-\toprule
-Variable(s) & Description \\
-\midrule
-\texttt{v501} & Current marital status of the respondent. \\
-\texttt{v529} & Computed time since last sexual intercourse. \\
-\texttt{v531} & Age at first sexual intercourse--imputed. \\
-\texttt{v766b} & Number of sexual partners during the last 12 months (including husband). \\
-\texttt{v767[a, b, c]} & Relationship with last three sexual partners. Options are: spouse, boyfriend not living with respondent, other friend, casual acquaintance, relative, commercial sex worker, live-in partner, other. \\
-\texttt{v791a} & Had sex in return for gifts, cash or anything else in the past 12 months. Asked only to women 15-24 who are not in a union. \\
-\bottomrule
-\end{tabularx}
-\caption{The survey questions included in AIDS Indicator Survey (AIS) and Demographic and Health Surveys (DHS).}
-\end{table}
+| Variable(s)               | Description                                                                                                                 |
+|---------------------------|-----------------------------------------------------------------------------------------------------------------------------|
+| $\texttt{v501}$           | Current marital status of the respondent.                                                                                   |
+| $\texttt{v529}$           | Computed time since last sexual intercourse.                                                                                |
+| $\texttt{v531}$           | Age at first sexual intercourse--imputed.                                                                                   |
+| $\texttt{v766b}$          | Number of sexual partners during the last 12 months (including husband).                                                    |
+| $\texttt{v767[a, b, c]}$  | Relationship with last three sexual partners. Options are: spouse, boyfriend not living with respondent, other friend, casual acquaintance, relative, commercial sex worker, live-in partner, other. |
+| $\texttt{v791a}$          | Had sex in return for gifts, cash or anything else in the past 12 months. (Asked only to women 15-24 who are not in a union.) |
 
-\begin{table}[h]
-\centering
-\begin{tabularx}{\textwidth}{lX}
-\toprule
-Variable(s) & Description \\
-\midrule
-\texttt{part12monum} & Number of sexual partners during the last 12 months (including husband). \\
-\texttt{part12modkr} & Reason for leaving \texttt{part12monum} blank. \\
-\texttt{partlivew[1, 2, 3]} & Does the person you had sex with live in this household? \\
-\texttt{partrelation[1, 2, 3]} & Relationship with last three sexual partners. Options are: husband, live-in partner, partner (not living with), ex-spouse/partner, friend/acquaintance, sex worker, sex worker client, stranger, other, don't know, refused. \\
-\texttt{sellsx12mo} & Had sex for money and/or gifts in the last 12 months. \\
-\texttt{buysx12mo} & Paid money or given gifts for sex in the last 12 months. \\
-\bottomrule
-\end{tabularx}
-\caption{The survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys.}
-\end{table}
+Table: (\#tab:survey-questions-ais-dhs) The survey questions included in AIDS Indicator Survey (AIS) and Demographic and Health Surveys (DHS).
+
+| Variable(s)                      | Description                                                                 |
+|--------------------------------  |-----------------------------------------------------------------------------|
+| $\texttt{part12monum}$           | Number of sexual partners during the last 12 months (including husband).    |
+| $\texttt{part12modkr}$           | Reason for leaving \texttt{part12monum} blank.                              |
+| $\texttt{partlivew[1, 2, 3]}$    | Does the person you had sex with live in this household?                    |
+| $\texttt{partrelation[1, 2, 3]}$ | Relationship with last three sexual partners. Options are: husband, live-in partner, partner (not living with), ex-spouse/partner, friend/acquaintance, sex worker, sex worker client, stranger, other, don't know, refused. |
+| $\texttt{sellsx12mo}$            | Had sex for money and/or gifts in the last 12 months.                       |
+| $\texttt{buysx12mo}$             | Paid money or given gifts for sex in the last 12 months.                    |
+
+Table: (\#tab:survey-questions-ais-dhs) The survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys.
