--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -19,7 +19,7 @@ resource_version <- "20231119-201207-bc89d17f"
 ```{r}
 gt_mse <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_mse.rds"))
 if(knitr::is_html_output()) gt_mse
-if(knitr::is_latex_output()) gt_mse %>% gt::as_latex()
+if(knitr::is_latex_output()) gt::as_latex(gt_mse)
 ```
 
 ### Continuous ranked probability score
@@ -27,7 +27,7 @@ if(knitr::is_latex_output()) gt_mse %>% gt::as_latex()
 ```{r}
 gt_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_crps.rds"))
 if(knitr::is_html_output()) gt_crps
-if(knitr::is_latex_output()) gt_crps %>% gt::as_latex()
+if(knitr::is_latex_output()) gt::as_latex(gt_crps)
 ```
 
 ### Calibration
