--- a/index.Rmd
+++ b/index.Rmd
@@ -140,14 +140,26 @@ knit: (function(input, ...) {bookdown::render_book(input, output_format = "bookd
 #knit: (function(input, ...) {bookdown::render_book(input, output_format = "bookdown::word_document2")})
 ---
 
-
 ```{r install_packages, include=FALSE}
+# Also sources package
 source('scripts_and_filters/install_packages_if_missing.R')
 ```
 
 ```{r create_chunk_options, include=FALSE, eval=knitr::is_latex_output()}
 source('scripts_and_filters/create_chunk_options.R')
 source('scripts_and_filters/wrap_lines.R')
+```
+
+```{r}
+# options(scipen = 100)
+
+# knitr::opts_chunk$set(
+#   warning = FALSE,
+#   message = FALSE,
+#   cache = FALSE,
+#   out.width = "95%",
+#   fig.align = 'center'
+# )
 ```
 
 <!--
