--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231119-201207-bc89d17f"
+resource_version <- "20231120-143446-b039098c"
 ```
 
 # Models for spatial structure
@@ -28,6 +28,55 @@ if(knitr::is_latex_output()) gt::as_latex(gt_mse)
 gt_crps <- readRDS(paste0("resources/beyond-borders/", resource_version, "/depends/gt_crps.rds"))
 if(knitr::is_html_output()) gt_crps
 if(knitr::is_latex_output()) gt::as_latex(gt_crps)
+```
+
+(ref:map-crps-1) Figure caption.
+
+```{r map-crps-1, fig.cap="(ref:map-crps-1)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-1.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-2) Figure caption.
+
+```{r map-crps-2, fig.cap="(ref:map-crps-2)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-2.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-3) Figure caption.
+
+```{r map-crps-3, fig.cap="(ref:map-crps-3)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-3.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-4) Figure caption.
+
+```{r map-crps-4, fig.cap="(ref:map-crps-4)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-4.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-grid) Figure caption.
+
+```{r map-crps-grid, fig.cap="(ref:map-crps-grid)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-grid.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-civ) Figure caption.
+
+```{r map-crps-civ, fig.cap="(ref:map-crps-civ)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-civ.png")
+knitr::include_graphics(path)
+```
+
+(ref:map-crps-tex) Figure caption.
+
+```{r map-crps-tex, fig.cap="(ref:map-crps-tex)"}
+path <- paste0("resources/beyond-borders/", resource_version, "/depends/map-crps-tex.png")
+knitr::include_graphics(path)
 ```
 
 ### Calibration
