--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -49,21 +49,35 @@ Table: (\#tab:surveys-excluded) All of that surveys that were excluded from the 
 
 ## Spatial analysis levels
 
+ana    
+DÃ©partement             Cameroon    
+County                   Kenya       
+District                 Lesotho     
+Distrito                 Mozambique  
+Health District + Cities Malawi      
+District                 Namibia     
+Region                   Eswatini    
+District                 Tanzania    
+District                 Uganda      
+District                 South Africa
+District                 Zambia      
+ 
+
 | Country      | Number of areas | Analysis level |
 |--------------|-----------------|----------------|
-| Botswana     | 27              | 3              |
-| Cameroon     | 58              | 2              |
-| Kenya        | 47              | 2              |
-| Lesotho      | 10              | 1              |
-| Mozambique   | 161             | 3              |
-| Malawi       | 33              | 5              |
-| Namibia      | 38              | 2              |
-| Eswatini     | 4               | 1              |
-| Tanzania     | 195             | 4              |
-| Uganda       | 136             | 3              |
-| South Africa | 52              | 2              |
-| Zambia       | 116             | 2              |
-| Zimbabwe     | 63              | 2              |
+| Botswana     | 27              | Health district |
+| Cameroon     | 58              | Department     |
+| Kenya        | 47              | County         |
+| Lesotho      | 10              | District       |
+| Mozambique   | 161             | District        |
+| Malawi       | 33              | Health district and cities |
+| Namibia      | 38              | District       |
+| Eswatini     | 4               | Region         |
+| Tanzania     | 195             | District       |
+| Uganda       | 136             | District       |
+| South Africa | 52              | District       |
+| Zambia       | 116             | District       |
+| Zimbabwe     | 63              | District       |
 
 Table: (\#tab:area-levels) The number of areas and analysis level for each country that was used in the analysis.
 
