--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -36,6 +36,12 @@ knitr::include_graphics("../figures/beyond-borders/geometry-graph.png")
 
 #
 
+```{r geometries, echo=FALSE, out.width="95%"}
+knitr::include_graphics("../figures/beyond-borders/geometries.png")
+```
+
+#
+
 ```{r intercept-comparison, echo=FALSE, out.width="70%", fig.align = 'center'}
 knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
 ```
@@ -45,5 +51,16 @@ knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
 ```{r pca-demo, echo=FALSE, out.width="95%"}
 knitr::include_graphics("../figures/naomi-aghq/pca-demo.png")
 ```
+
+# Acknowledgements
+
+| Collaborator  | Affiliation       |
+| ------------- | ----------------- |
+| Jeff Eaton    | Harvard, Imperial |
+| Seth Flaxman  | Oxford            |
+| Alex Stringer | Waterloo          |
+| HIV Inference Group | Imperial    |
+| Machine Learning and Global Health Network | Worldwide |
+| StatML CDT  | Imperial, Oxford    |
 
 # References {.allowframebreaks}
