--- a/references.bib
+++ b/references.bib
@@ -2427,3 +2427,14 @@
   number       = {suppl 2},
   pages        = {ii28--ii35}
 }
+
+@Misc{loo,
+  title = {loo: Efficient leave-one-out cross-validation and WAIC for
+    Bayesian models},
+  author = {Aki Vehtari and Jonah Gabry and Mans Magnusson and Yuling
+    Yao and Paul-Christian Bürkner and Topi Paananen and Andrew
+    Gelman},
+  year = {2023},
+  note = {R package version 2.6.0},
+  url = {https://mc-stan.org/loo/},
+}
