Small fixes and add bug

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -63,8 +63,8 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 ```
 
 This thesis is about applied and methodological Bayesian statistics.
-It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-The statistical approach is Bayesian because I use probability theory to arrive at conclusions based on models for observed data.
+It is applied and methodological in that the primary concern is real world questions and the means to answer them.
+The statistical approach is Bayesian because probability theory is used to arrive at conclusions based on models for observed data.
 
 (ref:gbd) HIV/AIDS is the largest cause of annual DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. Weights used to account for disability vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
@@ -78,7 +78,7 @@ Quantification of the epidemic using statistics is an important part of the publ
 Effective implementation of HIV prevention and treatment requires strategic information.
 However, producing suitable estimates of relevant indicators is made difficult by a range of statistical challenges.
 
-The data I use were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
+The data used were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which each observation was recorded.
 Spatio-temporal data occur across a range of application settings.
 While diverse in setting, they have distinctive recurring commonalities which make their collective study worthwhile.
@@ -86,6 +86,7 @@ The work conducted in this thesis makes use of, and aspires to contribute to, te
 
 Computation is an essential part of modern statistical practice.
 Each project in this thesis, and the thesis itself, is accompanied by R [@r] code, hosted on GitHub at [`https://github.com/athowes`](https://github.com/athowes).
+To facilitate reproducible research, the R package `orderly` [@orderly] was used to structure code repositories.
 
 ## Chapter overview
 
@@ -106,4 +107,4 @@ Second, I developed an approximate Bayesian inference method combining adaptive 
 I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order or as standalone studies.
+Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order or as stand-alone studies.
