--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -106,7 +106,7 @@ Three landmark randomised control trials [@auvert2005randomized; @gray2007male; 
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings.
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
 
-* Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretrovial drugs which can be taken before and after exposure to prevent transmission.
+* Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are antiretroviral drugs which can be taken before and after exposure to prevent transmission.
 PrEP and PEP are more costly than some other prevention options, so primarily useful in high risk settings.
 
 Though important progress had been made, facilitated by the interventions above, there remains much more to do.
