--- a/references.bib
+++ b/references.bib
@@ -2438,3 +2438,10 @@
   note = {R package version 2.6.0},
   url = {https://mc-stan.org/loo/},
 }
+
+@Manual{orderly,
+  title = {orderly: Lightweight Reproducible Reporting},
+  author = {Rich FitzJohn and Robert Ashton and Alex Hill and Martin Eden and Wes Hinsley and Emma Russell and James Thompson},
+  year = {2023},
+  note = {https://www.vaccineimpact.org/orderly/, https://github.com/vimc/orderly},
+}
