Malawi with no islands working

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 ---
 
 ```{r}
-resource_version <- "20231120-143446-b039098c"
+resource_version <- "20231121-121421-a64c99a0"
 ```
 
 # Models for spatial structure {#beyond-borders}
@@ -559,7 +559,7 @@ To this end, model performance was compared in estimating district-level HIV pre
 | Country        | Survey    | Number of areas | Analysis level |
 |----------------|---------- |-----------------|-----------------|
 | Côte d'Ivoire  | PHIA 2017 | 33              | Region          |
-| Malawi         | PHIA 2016 | 33              | Health district and cities |
+| Malawi         | PHIA 2016 | 31              | Health district and cities, with the islands Likoma and Chizumulu removed |
 | Tanzania       | PHIA 2017 | 31              | Region          |
 | Zimbabwe       | PHIA 2016 | 60              | District        |
 
