--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -5,7 +5,7 @@
 <!-- If you feel it necessary to include an appendix, it goes here. The first appendix should include the commands above. -->
 
 ```{r}
-resource_version <- "20231120-143446-b039098c"
+resource_version <- "20231121-121421-a64c99a0"
 ```
 
 # Models for spatial structure
@@ -138,6 +138,12 @@ knitr::include_graphics(path)
 
 ```{r ladder-civ2017phia, fig.cap="(ref:ladder-civ2017phia)"}
 knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-civ2017phia.png"))
+```
+
+(ref:ladder-mwi2016phia) Figure caption.
+
+```{r ladder-mwi2016phia, fig.cap="(ref:ladder-mwi2016phia)"}
+knitr::include_graphics(paste0("resources/beyond-borders/", resource_version, "/depends/ladder-mwi2016phia.png"))
 ```
 
 (ref:ladder-tza2017phia) Figure caption.
