--- a/index.Rmd
+++ b/index.Rmd
@@ -151,15 +151,7 @@ source('scripts_and_filters/wrap_lines.R')
 ```
 
 ```{r}
-# options(scipen = 100)
-
-# knitr::opts_chunk$set(
-#   warning = FALSE,
-#   message = FALSE,
-#   cache = FALSE,
-#   out.width = "95%",
-#   fig.align = 'center'
-# )
+knitr::opts_chunk$set(cache = FALSE)
 ```
 
 <!--
