Update Chapter 4 plots with unit scaling bug fixed

--- a/references.bib
+++ b/references.bib
@@ -407,7 +407,7 @@
   pages        = {83--87}
 }
 @article{chau2021deconditional,
-  title        = {{Deconditional downscaling with gaussian processes}},
+  title        = {{Deconditional downscaling with Gaussian processes}},
   author       = {Chau, Siu Lun and Bouabid, Shahine and Sejdinovic, Dino},
   year         = 2021,
   journal      = {Advances in Neural Information Processing Systems},
