Couple of small changes

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -122,8 +122,8 @@ knitr::include_graphics("figures/hiv-aids/naomi-continent.png")
 
 <!-- Prioritisation of interventions  -->
 For available resources to have the greatest impact, it is important that the right HIV interventions to be prioritised to the right populations, in the right place, and at the right time.
-This paradigm has been termed precision public health [@khoury2016precision], by analogy to precision medicine.
-While precision medicine tailors treatment to the individual, precision public health tailors treatment to the population.
+By analogy to precision medicine, this paradigm has been termed precision public health [@khoury2016precision].
+While precision medicine tailors treatments to the individual, precision public health tailors treatments to the population.
 Differences in the cost-effectiveness of any given intervention can be vast, with some interventions orders of magnitude more impactful than others [@ord2013moral].
 
 <!-- Uneven burden in space -->
@@ -145,11 +145,11 @@ KPs are often marginalised, and face legal and social barriers.
 Concentrated settings are defined by the majority of new HIV infections occurring in KPs and their sexual partners.
 In generalised settings like SSA, risk is more diffuse across the population.
 For example, in SSA adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection [@risher2021age; @monod2023growing] but not typically considered a KP.
-That said, concentrated subepidemics often occur within what are nominally generalised settings [@tanser2014concentrated].
+That said, concentrated subepidemics often occur within nominally generalised settings [@tanser2014concentrated].
 
 <!-- Practical methods for prevention prioritisation: what is being done and is it working -->
-Differentiated HIV treatment and prevention services can be practically implemented via a number of approaches [@eaton2022aids].
-These include geographic and demographic prioritisation, key and vulnerable population services, and risk screening based on individual-level risk characteristics.
+Differentiated HIV treatment and prevention services can be practically implemented via a number of approaches.
+These include geographic and demographic prioritisation, key population services, and risk screening based on individual-level risk characteristics [@eaton2022aids].
 
 ## HIV surveillance {#surveillance}
 
