--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -149,7 +149,8 @@ The integrated nested Laplace approximation [INLA; @rue2009approximate] combines
 The Laplace approximation and INLA are used extensively throughout this thesis.
 A complete introduction is provided in Section \@ref(naomi-inference).
 
-Another prominent determinisitc approach is variational inference [VI; @blei2017variational], in which the approximate posterior distribution is assumed to belong to a particular family of functions.
+Variational inference [VI; @blei2017variational] is another prominent deterministic apppraoch.
+In VI, the approximate posterior distribution is assumed to belong to a particular family of functions.
 Optimisation algorithms are then used to choose the best member of that family, typically by minimising the Kullback-Leibler divergence to the posterior distribution.
 VI is often faster than Monte Carlo methods, especially for large datasets or models.
 However, it lacks theoretical guarantees and is known to often inaccurately estimate posterior variances [@giordano2018covariances].
