--- a/references.bib
+++ b/references.bib
@@ -2445,3 +2445,9 @@
   year = {2023},
   note = {https://www.vaccineimpact.org/orderly/, https://github.com/vimc/orderly},
 }
+
+@article{vehtari2012survey,
+  title={A survey of Bayesian predictive methods for model assessment, selection and comparison},
+  author={Vehtari, Aki and Ojanen, Janne},
+  year={2012}
+}
